Update index.html to center heading in home page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <div
         class="home-content d-flex flex-column justify-content-center align-items-center h-100 text-white"
       >
-        <h1 class="fw-semibold">I am Morgan Freeman</h1>
+        <h1 class="fw-semibold text-center">I am Morgan Freeman</h1>
         <div class="words">
           <p id="element"></p>
         </div>
